--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "",
   "main": "lib/index.js",
-  "scripts": {},
+  "scripts": {
+    "start:dev": "webpack-dev-server"
+  },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/aristov/reactmodule.git"
@@ -13,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/aristov/reactmodule/issues"
   },
-  "homepage": "https://github.com/aristov/reactmodule#readme"
+  "homepage": "https://github.com/aristov/reactmodule#readme",
+  "devDependencies": {
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.2"
+  }
 }
