--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "start:dev": "webpack-dev-server"
+    "start": "node ./server.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,14 @@
   },
   "homepage": "https://github.com/aristov/reactmodule#readme",
   "devDependencies": {
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^5.45.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-dev-middleware": "^5.0.0",
+    "css-loader": "^6.1.0",
+    "style-loader": "^3.1.0"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
