--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
   },
   "homepage": "https://github.com/aristov/reactmodule#readme",
   "devDependencies": {
+    "css-loader": "^6.1.0",
+    "style-loader": "^3.1.0",
     "webpack": "^5.45.1",
     "webpack-cli": "^4.7.2",
-    "webpack-hot-middleware": "^2.25.0",
     "webpack-dev-middleware": "^5.0.0",
-    "css-loader": "^6.1.0",
-    "style-loader": "^3.1.0"
+    "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "serve-favicon": "^2.5.0"
   }
 }
